--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique optio esse praesentium laboriosam, id facere, accusamus delectus fugit odit quaerat quisquam sequi nulla libero aperiam ullam dolorum! Modi, rem sequi.</p>
 </body>
 </html>
