--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hello world</h1>
+
+    <ul>
+        <li>Tandz</li>
+        <li>Xndzor</li>
+        <li>Mandarin</li>
+    </ul>
 </body>
 </html>
